﻿RELEASE HISTORY

04/12/2014 1.00 beta rev 441
    - Added "MiLight Control" app
    - Fixed bug in interconnections remote module control
    - Some minor fixes to previous commit

03/12/2014 1.00 beta rev 440
    - Updated Generic Thermostat and Philips Hue app; added ZWave Thermostat poll app
    - Added automatic hiding of options/programs when not enabled on current system configuration
    - Added "{hostos}" keyword to MIG web service gateway preprocessor
    - Closes github issue #55

02/12/2014 1.00 beta rev 439
    - Completed Arduino Sketch file manager
    - Merged github pull request #56 from Bounz (some fixes to ZWave thermostat handler)

01/12/2014 1.00 beta rev 438
    - Updated completed russian translation
    - Adding file manager for Arduino Sketch (wip)

30/11/2014 1.00 beta rev 435
    - Fixed wrong assembly reference (TcpClientLib instead of NetClientLib) in CSharpAppFactory.cs
    - Some other bug fixing to localization functions
    - Merged pull request #53 from github : Interface localization improvements, preliminary ZWaveMe.Thermostat support by Bounz

29/11/2014 1.00 beta rev 434
    - Added UdpClientHelper (contributed by smeghead)
    - Added jSettings for client side settings persistence (issue #51)
    - Update JQuery Mobile to 1.4.5
    - Fixed bug in popups theming (not adapting when choosing a different theme)
    - Added EndOfLine property both to TcpClientHelper and SerialPortHelper
    - Fixed issues affecting TcpClientHelper (issue #48)
    - Fixed bug in releasing resources used by SerialPortHelper, NetHelper and TcpClientHelper

25/11/2014 1.00 beta rev 431
    - Fixed Arduino Sketch upload issues
    - Patched avrdude on Raspberry Pi SD card to support GPIO#27-DTR and allow direct UART to Arduino upload
    - Added Doxygen project for generating autodocs
    - Removed IsOn/IsOff check from Scheduled On/Off app
    - Added value "Smoothing" option to MCP3008 app

23/11/2014 1.00 beta rev 430