@@ -383,6 +383,7 @@ namespace HomeGenie.Service.Handlers
                         // Only restore user space programs
                         if (selectedPrograms.Contains("," + program.Address.ToString() + ",") && program.Address >= ProgramEngine.USER_SPACE_PROGRAMS_START)
                         {
+                            int oldPid = program.Address;
                             if (currentProgram == null)
                             {
                                 var newPid = ((currentProgram != null && currentProgram.Address == program.Address) ? homegenie.ProgramEngine.GeneratePid() : program.Address);
@@ -421,6 +422,26 @@ namespace HomeGenie.Service.Handlers
                                 {
                                 }
                                 homegenie.ProgramEngine.ProgramAdd(program);
+                            }
+                            // Restore Arduino program folder ...
+                            // TODO: this is untested yet...
+                            if (program.Type.ToLower() == "arduino")
+                            {
+                                string sourceFolder = Path.Combine(AppDomain.CurrentDomain.BaseDirectory,
+                                                                   "tmp",
+                                                                   "programs",
+                                                                   "arduino",
+                                                                   oldPid.ToString());
+                                string arduinoFolder = Path.Combine(AppDomain.CurrentDomain.BaseDirectory,
+                                                                    "programs",
+                                                                    "arduino",
+                                                                    program.Address.ToString());
+                                if (Directory.Exists(arduinoFolder)) Directory.Delete(arduinoFolder, true);
+                                Directory.CreateDirectory(arduinoFolder);
+                                foreach (string newPath in Directory.GetFiles(sourceFolder))
+                                {
+                                    File.Copy(newPath, newPath.Replace(sourceFolder, arduinoFolder), true);
+                                }
                             }
                         }
                         else if (currentProgram != null && program.Address < ProgramEngine.USER_SPACE_PROGRAMS_START)
