@@ -2,8 +2,8 @@
   <MonoDevelop.Ide.Workspace ActiveConfiguration="Debug" />
   <MonoDevelop.Ide.Workbench ActiveDocument="../HISTORY.TXT">
     <Files>
-      <File FileName="../HISTORY.TXT" Line="2" Column="1" />
-      <File FileName="../HomeGenie/release_info.xml" Line="19" Column="35" />
+      <File FileName="../HISTORY.TXT" Line="4" Column="5" />
+      <File FileName="../HomeGenie/release_info.xml" Line="1" Column="1" />
     </Files>
   </MonoDevelop.Ide.Workbench>
   <MonoDevelop.Ide.DebuggingService.Breakpoints>
